--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "^28.0.2"
   },
   "dependencies": {
-    "@types/jest": "^27.4.1"
+    "@types/jest": "^27.4.1",
+    "hex-to-binary": "^1.0.1"
   }
 }
