--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "block.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.1",
+    "express": "^4.18.1",
     "hex-to-binary": "^1.0.1"
   }
 }
