--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "block.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,10 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.1",
-    "hex-to-binary": "^1.0.1"
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "hex-to-binary": "^1.0.1",
+    "redis": "^3.1.2",
+    "tcp-port-used": "^1.0.2"
   }
 }
