--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^27.4.1",
     "express": "^4.18.1",
     "hex-to-binary": "^1.0.1",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "tcp-port-used": "^1.0.2"
   }
 }
