--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.1",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "hex-to-binary": "^1.0.1",
     "redis": "^3.1.2",
