--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@types/jest": "^27.4.1",
     "axios": "^0.27.2",
+    "elliptic": "^6.5.4",
     "express": "^4.18.1",
     "hex-to-binary": "^1.0.1",
     "redis": "^3.1.2",
-    "tcp-port-used": "^1.0.2"
+    "tcp-port-used": "^1.0.2",
+    "uuid": "^8.3.2"
   }
 }
