--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "hex-to-binary": "^1.0.1",
     "redis": "^3.1.2",
-    "tcp-port-used": "^1.0.2"
+    "tcp-port-used": "^1.0.2",
+    "uuid": "^8.3.2"
   }
 }
