--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "cryptochain",
   "version": "1.0.0",
   "description": "",
-  "main": "block.js",
   "scripts": {
     "test": "jest",
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "build-client": "parcel build client/src/index.html --dist-dir client/dist",
+    "dev-client": "parcel client/src/index.html --dist-dir client/dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^28.0.2"
+    "jest": "^28.0.2",
+    "parcel": "^2.6.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "@types/jest": "^27.4.1",
@@ -20,6 +23,8 @@
     "elliptic": "^6.5.4",
     "express": "^4.18.1",
     "hex-to-binary": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "redis": "^3.1.2",
     "tcp-port-used": "^1.0.2",
     "uuid": "^8.3.2"
