--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "test": "jest",
     "start": "node index",
-    "dev": "nodemon index",
     "build-client": "parcel build client/src/index.html --dist-dir client/dist",
-    "dev-client": "parcel client/src/index.html --dist-dir client/dist"
+    "dev-client": "parcel client/src/index.html --dist-dir client/dist",
+    "dev": "concurrently \"npm run dev-client\" \"node index\""
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/jest": "^27.4.1",
     "axios": "^0.27.2",
+    "concurrently": "^7.2.2",
     "elliptic": "^6.5.4",
     "express": "^4.18.1",
     "hex-to-binary": "^1.0.1",
