--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "jest": "^28.0.2",
     "parcel": "^2.6.0",
     "process": "^0.11.10"
