--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hex-to-binary": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "redis": "^3.1.2",
     "tcp-port-used": "^1.0.2",
     "uuid": "^8.3.2"
